--- a/app/src/main/res/layout/recipe_fragment.xml
+++ b/app/src/main/res/layout/recipe_fragment.xml
@@ -28,18 +28,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraint_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/image_layout"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="30"
-                    android:adjustViewBounds="true">
+                    android:adjustViewBounds="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHeight_percent="30"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <ImageView
                         android:id="@+id/recipe_image"
@@ -49,12 +51,12 @@
                         android:background="@color/transparent"
                         android:contentDescription="Recipe image"
                         android:scaleType="centerCrop"
+                        android:src="@{recipe.recipeInfo.imageUri == null ? null : Uri.parse(recipe.recipeInfo.imageUri)}"
+                        android:transitionName="@{Constants.RECIPE_IMG_TRANSITION_ID}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:src="@{recipe.recipeInfo.imageUri == null ? null : Uri.parse(recipe.recipeInfo.imageUri)}"
-                        android:transitionName="@{Constants.RECIPE_IMG_TRANSITION_ID}"/>
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/title"
@@ -68,224 +70,101 @@
                         android:text="@{recipe.recipeInfo.title}"
                         android:textColor="@color/white"
                         android:textSize="32sp"
-                        app:layout_constraintBottom_toBottomOf="@id/recipe_image"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:transitionName="@{Constants.RECIPE_TITLE_TRANSITION_ID}"/>
+                        android:transitionName="@{Constants.RECIPE_TITLE_TRANSITION_ID}"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/recipe_info_layout"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:paddingStart="8dp"
-                    android:paddingEnd="8dp">
+                    android:paddingEnd="8dp"
+                    app:layout_constraintHeight_percent="10"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/image_layout">
 
-                    <LinearLayout
-                        android:id="@+id/time_layout"
+                    <TextView
+                        android:id="@+id/time_title"
+                        style="@style/MainTextStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:visibility="@{recipe.recipeInfo.timeMinutes == null ? View.GONE : View.VISIBLE}"
+                        android:layout_marginStart="8dp"
+                        android:text="@string/time"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
+                        app:layout_constraintStart_toStartOf="parent" />
 
-                        <TextView
-                            android:id="@+id/time_title"
-                            style="@style/MainTextStyle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/time" />
-
-                        <TextView
-                            android:id="@+id/time_value"
-                            style="@style/SecondaryTextStyle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginEnd="8dp"
-                            android:text="@{recipe.recipeInfo.timeMinutes + ` ` + @string/min}" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/difficulty_layout"
+                    <TextView
+                        android:id="@+id/time_value"
+                        style="@style/SecondaryTextStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="horizontal"
-                        android:visibility="@{recipe.recipeInfo.difficulty == null ? View.GONE : View.VISIBLE}"
+                        android:layout_marginStart="8dp"
+                        android:text="@{recipe.recipeInfo.timeMinutes + ` ` + @string/min}"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/time_layout"
-                        app:layout_constraintTop_toTopOf="parent">
+                        app:layout_constraintStart_toEndOf="@id/time_title" />
 
-                        <TextView
-                            android:id="@+id/difficulty_title"
-                            style="@style/MainTextStyle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/difficulty" />
-
-                        <TextView
-                            android:id="@+id/difficulty_value"
-                            style="@style/SecondaryTextStyle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginEnd="8dp"
-                            android:text="@{String.valueOf(recipe.recipeInfo.difficulty)}" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/servings_layout"
+                    <TextView
+                        android:id="@+id/difficulty_title"
+                        style="@style/MainTextStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="horizontal"
-                        android:visibility="@{recipe.recipeInfo.servings == null ? View.GONE : View.VISIBLE}"
+                        android:layout_marginStart="8dp"
+                        android:text="@string/difficulty"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/difficulty_layout"
-                        app:layout_constraintTop_toTopOf="parent">
+                        app:layout_constraintStart_toEndOf="@id/time_value" />
 
-                        <TextView
-                            android:id="@+id/servings_title"
-                            style="@style/MainTextStyle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/servings" />
+                    <TextView
+                        android:id="@+id/difficulty_value"
+                        style="@style/SecondaryTextStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="8dp"
+                        android:text="@{String.valueOf(recipe.recipeInfo.difficulty)}"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/difficulty_title" />
 
-                        <TextView
-                            android:id="@+id/recipe_servings"
-                            style="@style/SecondaryTextStyle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginEnd="8dp"
-                            android:text="@{String.valueOf(recipe.recipeInfo.servings)}" />
-                    </LinearLayout>
+                    <TextView
+                        android:id="@+id/servings_title"
+                        style="@style/MainTextStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="8dp"
+                        android:text="@string/servings"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/difficulty_value" />
+
+                    <TextView
+                        android:id="@+id/recipe_servings"
+                        style="@style/SecondaryTextStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="8dp"
+                        android:text="@{String.valueOf(recipe.recipeInfo.servings)}"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/servings_title" />
+                    <!-- TODO add tags-->
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <!-- TODO add tags-->
-                <LinearLayout
-                    android:id="@+id/ingredients_layout"
+                <FrameLayout
+                    android:id="@+id/child_frame_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginEnd="24dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHeight_percent="60"
+                    app:layout_constraintHorizontal_bias="0.6"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/recipe_info_layout" />
 
-                    android:orientation="vertical"
-                    android:paddingStart="24dp"
-                    android:paddingTop="24dp"
-                    android:paddingEnd="24dp"
-                    android:paddingBottom="24dp">
-
-
-                    <CheckBox
-                        android:id="@+id/checkBox"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Lentils" />
-
-                    <CheckBox
-                        android:id="@+id/checkBox1"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Salt" />
-
-                    <CheckBox
-                        android:id="@+id/checkBox2"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Bayleaf" />
-
-                    <CheckBox
-                        android:id="@+id/checkBox3"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Bayleaf" />
-
-                    <CheckBox
-                        android:id="@+id/checkBox4"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Bayleaf" />
-
-                    <CheckBox
-                        android:id="@+id/checkBox5"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Bayleaf" />
-
-                    <CheckBox
-                        android:id="@+id/checkBox6"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Bayleaf" />
-
-                    <CheckBox
-                        android:id="@+id/checkBox7"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Bayleaf" />
-
-                    <CheckBox
-                        android:id="@+id/checkBox8"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Bayleaf" />
-
-                    <CheckBox
-                        android:id="@+id/checkBox9"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Bayleaf" />
-
-                    <CheckBox
-                        android:id="@+id/checkBgox5"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Bayleaf" />
-
-                    <CheckBox
-                        android:id="@+id/as"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Bayleaf" />
-
-                    <CheckBox
-                        android:id="@+id/adsd"
-                        style="@style/MainTextStyle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="@color/black"
-                        android:text="Bayleaf" />
-                </LinearLayout>
-
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </ScrollView>
 
@@ -307,8 +186,7 @@
             app:elevation="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recipe_scroll_view" />
+            app:layout_constraintStart_toStartOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
